<resources>
    <string name="DB">Users_DB</string>
    <string name="app_name">Fluffy Kittens</string>
    <string name="mail">Укажите почту</string>
    <string name="password">Введите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up_msg">Ещё не зарегистрировались?</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="password_check">Повторите пароль</string>
    <string name="user_name_lbl">Добро пожаловать!</string>
    <string name="start">Начать игру</string>
    <string name="sign_out">Выйти из аккаунта</string>
    <string name="exit">Выйти к профилю</string>
    <string name="pause">Пауза</string>
    <string name="play">Играть</string>
    <string name="start_new_game">Новая игра</string>
    <string name="easy">Легкий режим</string>
    <string name="hard">Сложный режим</string>
    <string name="left">Влево</string>
    <string name="right">Вправо</string>
    <string name="rotate_ac">Повернуть</string>
    <string name="score">Счет</string>
    <string name="game_over">Игра окончена</string>
    <string name="down">Вниз</string>
    <string name="records">Рекорды</string>
    <string name="back_to_profile">Вернуться в профиль</string>
    <string name="no_records">Еще нет рекордов</string>
    <string name="user_already_exists">Аккаунт с такой почтой уже существует</string>
    <string name="incorrect_symbols">В пароле недопустимые символы</string>
    <string name="success_registration">Успешная регистрация</string>
    <string name="passwords_dont_match">Пароли не совпадают</string>
    <string name="small_password">Пароль слишком короткий (менее 8)</string>
    <string name="incorrect_email">Почта введена некорректно</string>
</resources>
